fix: autograd post correction to image background for legibility / centered layout

--- a/_css/posts.css
+++ b/_css/posts.css
@@ -1,3 +1,9 @@
+.centered-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .page,
 .post {
   margin-bottom: 4em;
